@@ -299,8 +299,10 @@
                             <target>${maven.compiler.target}</target>
                             <encoding>${project.build.sourceEncoding}</encoding>
                             <compilerArgs>
-                                <arg>--add-modules</arg>
-                                <arg>org.eclipse.swt.win32.win32.x86_64</arg>
+                                <!--                                <arg>&#45;&#45;add-modules</arg>-->
+                                <!--                                <arg>org.eclipse.swt.win32.win32.x86_64</arg>-->
+                                <arg>--add-exports</arg>
+                                <arg>org.eclipse.swt.win32.win32.x86_64=javafx.swt</arg>
                             </compilerArgs>
                         </configuration>
                     </plugin>
